[gd_scene load_steps=4 format=3 uid="uid://ddomhnpbs1h7c"]

[ext_resource type="Shader" uid="uid://dgydncsiucj6g" path="res://assets/materials/water_shader.gdshader" id="1_6bmsu"]
[ext_resource type="Script" uid="uid://q276d3tkiwhv" path="res://scenes/upgrade/upgrade.gd" id="1_jp15f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jp15f"]
shader = ExtResource("1_6bmsu")
shader_parameter/R = Vector2(0.8, 0.6)
shader_parameter/scale = 0.5
shader_parameter/speed = 0.5
shader_parameter/moveSpeed = 0.1
shader_parameter/direction = Vector3(0.5, 1, 0)
shader_parameter/distortion = 0.5
shader_parameter/layers = 2.0
shader_parameter/shades = 3.0
shader_parameter/steps = 6
shader_parameter/tint = Vector3(0.4, 1, 0.5)

[node name="Upgrade" type="Node2D"]
script = ExtResource("1_jp15f")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_jp15f")
offset_right = 960.0
offset_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 960.0
offset_bottom = 540.0
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose An Upgrade!"
horizontal_alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_constants/separation = 50

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_neighbor_right = NodePath("../ColorRect2")
focus_neighbor_bottom = NodePath("../../../Button")
focus_next = NodePath("../ColorRect2")
focus_mode = 2
color = Color(0.392157, 0.392157, 0.392157, 0.894118)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BoxContainer/HBoxContainer/ColorRect"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 344.0

[node name="Name" type="Label" parent="VBoxContainer/BoxContainer/HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Greataxe"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BoxContainer/HBoxContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4

[node name="Description" type="Label" parent="VBoxContainer/BoxContainer/HBoxContainer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "- Hits hard
-Inconsistent"

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/BoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../ColorRect")
focus_neighbor_right = NodePath("../ColorRect3")
focus_neighbor_bottom = NodePath("../../../Button")
focus_next = NodePath("../ColorRect3")
focus_previous = NodePath("../ColorRect")
focus_mode = 2
color = Color(0.392157, 0.392157, 0.392157, 0.894118)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BoxContainer/HBoxContainer/ColorRect2"]
offset_right = 200.0
offset_bottom = 344.0

[node name="Name" type="Label" parent="VBoxContainer/BoxContainer/HBoxContainer/ColorRect2/VBoxContainer"]
layout_mode = 2
text = "Lead Pipe"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BoxContainer/HBoxContainer/ColorRect2/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4

[node name="Description" type="Label" parent="VBoxContainer/BoxContainer/HBoxContainer/ColorRect2/VBoxContainer"]
layout_mode = 2
text = "- Hits fine
- Toxic"

[node name="ColorRect3" type="ColorRect" parent="VBoxContainer/BoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../ColorRect2")
focus_neighbor_bottom = NodePath("../../../Button")
focus_previous = NodePath("../ColorRect2")
focus_mode = 2
color = Color(0.392157, 0.392157, 0.392157, 0.894118)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/BoxContainer/HBoxContainer/ColorRect3"]
offset_right = 200.0
offset_bottom = 344.0

[node name="Name" type="Label" parent="VBoxContainer/BoxContainer/HBoxContainer/ColorRect3/VBoxContainer"]
layout_mode = 2
text = "Umbrella"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/BoxContainer/HBoxContainer/ColorRect3/VBoxContainer"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 4

[node name="Description" type="Label" parent="VBoxContainer/BoxContainer/HBoxContainer/ColorRect3/VBoxContainer"]
layout_mode = 2
text = "- Hits softly
- Water
   Repellant"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../BoxContainer/HBoxContainer/ColorRect")
focus_neighbor_top = NodePath("../BoxContainer/HBoxContainer/ColorRect2")
focus_neighbor_right = NodePath("../BoxContainer/HBoxContainer/ColorRect3")
focus_previous = NodePath("../BoxContainer/HBoxContainer/ColorRect2")
text = "Skip"

[connection signal="focus_entered" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect" to="." method="_on_color_rect_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect" to="." method="_on_color_rect_focus_exited"]
[connection signal="gui_input" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect" to="." method="_on_color_rect_focus_entered"]
[connection signal="mouse_exited" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect" to="." method="_on_color_rect_focus_exited"]
[connection signal="focus_entered" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect2" to="." method="_on_color_rect_2_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect2" to="." method="_on_color_rect_2_focus_exited"]
[connection signal="gui_input" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect2" to="." method="_on_color_rect_2_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect2" to="." method="_on_color_rect_2_focus_entered"]
[connection signal="mouse_exited" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect2" to="." method="_on_color_rect_2_focus_exited"]
[connection signal="focus_entered" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect3" to="." method="_on_color_rect_3_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect3" to="." method="_on_color_rect_3_focus_exited"]
[connection signal="gui_input" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect3" to="." method="_on_color_rect_3_gui_input"]
[connection signal="mouse_entered" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect3" to="." method="_on_color_rect_3_focus_entered"]
[connection signal="mouse_exited" from="VBoxContainer/BoxContainer/HBoxContainer/ColorRect3" to="." method="_on_color_rect_3_focus_exited"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
